hphp/test/zend/good/ext/simplexml/tests/bug39760.php.skipif
<?php if (!extension_loaded("simplexml")) print "skip simplexml extension is not loaded"; ?>