hphp/test/zend/bad/tests/run-test/test005.php.skipif
<?php
!extension_loaded("Zend Optimizer") or die("skip Zend Optimizer is loaded");
?>